# CovariateRiskSharing

./: .dockerignore  .gitignore  .gitmodules  Figures  LICENSE.txt  MANIFEST.org  Makefile  Makefile_spacf  README.md  README.org  environment.yml  matplotlibrc  pyproject.toml  results  sitecustomize.py  var
Text/: covariate_risksharing.bib  covariate_risksharing.tex  risk-sharing.org
external_data/: lsms_ag.parquet
misc/docker/: Dockerfile.debian-minimal  docker-testing.md
misc/slurm/: README.md  lsms-spacf.slurm  make-full.slurm  make-results-figures.slurm
scripts/: check_setup_sanity.py  summarize_benchmarks.py
tests/: linearmodels_shock_regressions.py  test_between_variance.py  test_lsms_library_dvc_paths.py  test_shocks_cache.py
